feat: add membership and log in pages

--- a/views/pages/membership.ejs
+++ b/views/pages/membership.ejs
@@ -6,10 +6,11 @@
     <title>Membership</title>
 </head>
 <body>
-    <form action="" method="POST">
+    <form action="/become-member" method="POST">
         <h1>Become member</h1>
         <label for="membership">Membership Password:</label>
-        <input type="text" name="Membership" id="membership">
+        <input type="text" name="membership" id="membership">
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
