--- a/views/pages/sign-up.ejs
+++ b/views/pages/sign-up.ejs
@@ -6,6 +6,12 @@
     <title>Sign Up</title>
 </head>
 <body>
+    <% if (locals.user) {%>
+        <h1>WELCOME BACK <%= user.first_name %></h1>
+        <a href="/log-out">LOG OUT</a>
+      <% } else { %>
+
+      
     <form action="/" method="POST">
         <h1>hello</h1>
         <label for="firstName">First name:</label>
@@ -27,5 +33,6 @@
             </ul>
         <% } %>
     </form>
+    <% } %>
 </body>
 </html>
