--- a/views/pages/membership.ejs
+++ b/views/pages/membership.ejs
@@ -8,8 +8,8 @@
 <body>
     <form action="/become-member" method="POST">
         <h1>Become member</h1>
-        <label for="membership">Membership Password:</label>
-        <input type="text" name="membership" id="membership">
+        <label for="memberPwd">Membership Password:</label>
+        <input type="password" name="memberPwd" id="memberPwd">
         <button type="submit">Submit</button>
     </form>
 </body>
