--- a/views/pages/messages.ejs
+++ b/views/pages/messages.ejs
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Messages here</h1>
+    <% if (locals.user) {%>
+      <a href="/new-message">Create New Message</a>
+    <% } %>
+    <a href="/become-member">Become Member</a>
     <a href="/logout">Logout</a>
 </body>
 </html>
