feat: add route for new message form

--- a/views/pages/messages.ejs
+++ b/views/pages/messages.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>Messages here</h1>
     <% if (locals.user) {%>
-      <a href="/new-message">Create New Message</a>
+      <a href="messages/new-message">Create New Message</a>
     <% } %>
     <a href="/become-member">Become Member</a>
     <a href="/logout">Logout</a>
