--- a/views/pages/createMessage.ejs
+++ b/views/pages/createMessage.ejs
@@ -6,7 +6,7 @@
     <title>New Message</title>
 </head>
 <body>
-    <form action="/new-message" method="POST">
+    <form action="/messages/new-message" method="POST">
         <h1>New Message</h1>
         <label for="title">Title:</label>
         <input type="text" name="title" id="title">
