--- a/views/pages/messages.ejs
+++ b/views/pages/messages.ejs
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>Messages</title>
 </head>
 <body>
     <h1>Messages here</h1>
+    <% messages.forEach(message => { %>
+      <article class="message-div">
+        <p><%= message.first_name %></p>
+        <p><%= message.title %></p>
+        <p><%= message.text %></p>
+        <p><%= message.timestamp %></p>
+      </article>
+    <% }) %>
     <% if (locals.user) {%>
       <a href="messages/new-message">Create New Message</a>
     <% } %>
