--- a/views/pages/messages.ejs
+++ b/views/pages/messages.ejs
@@ -7,26 +7,37 @@
     <title>Messages</title>
 </head>
 <body>
-    <h1>Messages here</h1>
-    <% messages.forEach(message => { %>
-      <article class="message-div">
-        <p>
-          <% if (locals.user.is_member) { %>
-            <%= message.first_name %>
-            <%= message.timestamp %>
-          <% } else { %>
-            Anonymous
-          <% } %> 
-        </p>
-        <p><%= message.title %></p>
-        <p><%= message.text %></p>
-        <p><%= message.is_member %></p>
-      </article>
-    <% }) %>
+    <% if (messages) { %>
+      <h1>Messages</h1>  
+      <% messages.forEach(message => { %>
+        <article class="message-div">
+          <p>
+            <% if (locals.user.user_role === 'member' || locals.user.user_role === 'admin') { %>
+              <%= message.first_name %>
+              <%= message.timestamp %>
+            <% } else { %>
+              Anonymous
+            <% } %> 
+          </p>
+          <p><%= message.title %></p>
+          <p><%= message.text %></p>
+          <p><%= message.user_role %></p>
+          <p><%= message.message_id %></p>
+          <% if (locals.user.user_role === 'admin') { %>
+           <form action="/delete/<%= message.message_id %>" method="POST">
+            <button type="submit">Delete</button>
+           </form>
+          <% } %>
+        </article>
+      <% }) %>
+    <% } else { %>
+      <h1>No Messages</h1>
+    <% } %>
+
     <% if (locals.user) {%>
       <a href="messages/new-message">Create New Message</a>
     <% } %>
-    <a href="/become-member">Become Member</a>
+    <a href="/change-role">Become Member</a>
     <a href="/logout">Logout</a>
 </body>
 </html>
