--- a/views/pages/createMessage.ejs
+++ b/views/pages/createMessage.ejs
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Message</title>
-</head>
-<body>
-    <form action="/messages/new-message" method="POST">
-        <h1>New Message</h1>
-        <label for="title">Title:</label>
-        <input type="text" name="title" id="title">
-        <label for="message">Message:</label>
-        <input type="text" name="message" id="message">
-        <button type="submit">Submit</button>
-    </form>
-</body>
+    <%- include('../partials/head') %>
+    <body>
+        <form action="/messages/new-message" method="POST">
+            <h1>New Message</h1>
+            <label for="title">Title:</label>
+            <input type="text" name="title" id="title">
+            <label for="message">Message:</label>
+            <input type="text" name="message" id="message">
+            <button type="submit">Submit</button>
+        </form>
+    </body>
 </html>
