--- a/views/pages/membership.ejs
+++ b/views/pages/membership.ejs
@@ -1,25 +1,20 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Membership</title>
-</head>
-<body>
-    <form action="/change-role" method="POST">
-        <h1>Become member</h1>
-        <fieldset>
-            <input type="radio" name="role" value="member" checked>
-            <label for="member">Member</label>
-            <input type="radio" name="role" value="admin">
-            <label for="admin">Admin</label>
-        </fieldset>
-        <label for="rolePassword">Membership Password:</label>
-        <input type="password" name="rolePassword" id="rolePassword">
-        <button type="submit">Submit</button>
-        <% if (locals.error) { %>
-            <p><%= error %></p>
-        <% } %>
-    </form>
-</body>
+    <%- include('../partials/head') %>
+    <body>
+        <form action="/change-role" method="POST">
+            <h1>Become member</h1>
+            <fieldset>
+                <input type="radio" name="role" value="member" checked>
+                <label for="member">Member</label>
+                <input type="radio" name="role" value="admin">
+                <label for="admin">Admin</label>
+            </fieldset>
+            <label for="rolePassword">Membership Password:</label>
+            <input type="password" name="rolePassword" id="rolePassword">
+            <button type="submit">Submit</button>
+            <% if (locals.error) { %>
+                <p><%= error %></p>
+            <% } %>
+        </form>
+    </body>
 </html>
