--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,18 @@
 <html lang="en">
     <%- include('../partials/head') %>
     <body>
-      <%- include('../partials/sign-up') %>
+      <% if (locals.user) {%>
+        <a href="messages/new-message">Create New Message</a>
+        <a href="/logout">Logout</a>
+        <a href="/change-role">Become Member</a>
+      <% } %>
+      
+      <% if (!locals.user) {%>
+        <p>Sign up to create new messages and become a member</p>
+        <a href="/sign-up">Sign Up</a>
+        <a href="/login">Login</a>
+      <% } %>
+
       <% if (messages && messages.length > 0) { %>
         <h1>Messages</h1>  
         <% messages.forEach(message => { %>
@@ -28,11 +39,5 @@
       <% } else { %>
         <h1>No Messages</h1>
       <% } %>
-
-      <% if (locals.user) {%>
-        <a href="messages/new-message">Create New Message</a>
-        <a href="/logout">Logout</a>
-      <% } %>
-      <a href="/change-role">Become Member</a>
     </body>
 </html>
