--- a/views/pages/messages.ejs
+++ b/views/pages/messages.ejs
@@ -1,35 +1,37 @@
 <html lang="en">
   <%- include('../partials/head') %>
   <body>
-      <% if (locals.user) {%>
-        <a href="messages/new-message">Create New Message</a>
-        <a href="/change-role">Become Member</a>
-        <a href="/logout">Logout</a>
-      <% } %>
-      <% if (messages && messages.length > 0) { %>
-        <h1>Messages</h1>  
-        <% messages.forEach(message => { %>
-          <article class="message-div">
-            <p>
-              <% if (locals.user.user_role === 'member' || locals.user.user_role === 'admin') { %>
-                <%= message.first_name %>
-                <%= message.timestamp %>
-              <% } else { %>
-                Anonymous
-              <% } %> 
-            </p>
-            <p><%= message.title %></p>
-            <p><%= message.text %></p>
-
-            <% if (locals.user.user_role === 'admin') { %>
-            <form action="messages/delete/<%= message.message_id %>" method="POST">
-              <button type="submit">Delete</button>
-            </form>
-            <% } %>
-          </article>
-        <% }) %>
-      <% } else { %>
-        <h1>No Messages</h1>
-      <% } %>
+      <main>
+        <% if (locals.user) {%>
+          <a href="messages/new-message">Create New Message</a>
+          <a href="/change-role">Become Member</a>
+          <a href="/logout">Logout</a>
+        <% } %>
+        <% if (messages && messages.length > 0) { %>
+          <h1>Messages</h1>
+          <% messages.forEach(message => { %>
+            <article class="message-div">
+              <p>
+                <% if (locals.user.user_role === 'member' || locals.user.user_role === 'admin') { %>
+                  <%= message.first_name %>
+                  <%= message.timestamp %>
+                <% } else { %>
+                  Anonymous
+                <% } %>
+              </p>
+              <p><%= message.title %></p>
+              <p><%= message.text %></p>
+              <% if (locals.user.user_role === 'admin') { %>
+              <form action="messages/delete/<%= message.message_id %>" method="POST">
+                <button type="submit">Delete</button>
+              </form>
+              <% } %>
+            </article>
+          <% }) %>
+        <% } else { %>
+          <h1>No Messages</h1>
+        <% } %>
+      </main>
+      <%- include('../partials/footer') %>
   </body>
 </html>
