--- a/views/pages/createMessage.ejs
+++ b/views/pages/createMessage.ejs
@@ -1,13 +1,16 @@
 <html lang="en">
     <%- include('../partials/head') %>
     <body>
-        <form action="/messages/new-message" method="POST">
-            <h1>New Message</h1>
-            <label for="title">Title:</label>
-            <input type="text" name="title" id="title">
-            <label for="message">Message:</label>
-            <input type="text" name="message" id="message">
-            <button type="submit">Submit</button>
-        </form>
+        <main>
+            <form action="/messages/new-message" method="POST">
+                <h1>New Message</h1>
+                <label for="title">Title:</label>
+                <input type="text" name="title" id="title">
+                <label for="message">Message:</label>
+                <input type="text" name="message" id="message">
+                <button type="submit">Submit</button>
+            </form>
+        </main>
+        <%- include('../partials/footer') %>
     </body>
 </html>
