--- a/views/pages/createMessage.ejs
+++ b/views/pages/createMessage.ejs
@@ -5,11 +5,18 @@
             <form action="/messages/new-message" method="POST">
                 <h1>New Message</h1>
                 <label for="title">Title:</label>
-                <input type="text" name="title" id="title">
+                <input type="text" name="title" id="title" required>
                 <label for="message">Message:</label>
-                <input type="text" name="message" id="message">
+                <input type="text" name="message" id="message" required>
                 <button type="submit">Submit</button>
             </form>
+            <% if (locals.errors) {%>
+                <ul>
+                    <% errors.forEach(function(error) { %>
+                    <li><%= error.msg %></li>
+                    <% }); %>
+                </ul>
+            <% } %>
         </main>
         <%- include('../partials/footer') %>
     </body>
