--- a/views/pages/messages.ejs
+++ b/views/pages/messages.ejs
@@ -12,21 +12,21 @@
           <% messages.forEach(message => { %>
             <article class="message-div">
               <% if (locals.user.user_role === 'member' || locals.user.user_role === 'admin') { %>
-                <p><%= message.first_name %></p>
-                <p>
+                <p class="message name"><%= message.first_name %></p>
+                <p class="message date">
                   <%= message.timestamp.toLocaleDateString('en-US', {
-                    weekday: 'short',
-                    year: 'numeric',
-                    month: 'short',
-                    day: 'numeric',
-                    }) %>
+                  weekday: 'short',
+                  year: 'numeric',
+                  month: 'short',
+                  day: 'numeric',
+                  }) %>
                   <%= message.timestamp.toLocaleTimeString() %>
                 </p>
               <% } else { %>
                 Anonymous
               <% } %>
-              <p><%= message.title %></p>
-              <p><%= message.text %></p>
+              <p class="message title"><%= message.title %></p>
+              <p class="message text"><%= message.text %></p>
               <% if (locals.user.user_role === 'admin') { %>
               <form action="messages/delete/<%= message.message_id %>" method="POST">
                 <button type="submit">Delete</button>
