feat: add failed login message to login page

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -5,11 +5,14 @@
             <form action="/login" method="POST">
                 <h1>Login</h1>
                 <label for="email">Email:</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" required>
                 <label for="password">Password:</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password" required>
                 <button type="submit">Log In</button>
             </form>
+            <% if (failureMessage) { %>
+                <p><%= failureMessage[0] %></p>
+            <% } %>
         </main>
         <%- include('../partials/footer') %>
     </body>
