--- a/views/pages/createMessage.ejs
+++ b/views/pages/createMessage.ejs
@@ -7,7 +7,7 @@
                 <label for="title">Title:</label>
                 <input type="text" name="title" id="title" required>
                 <label for="message">Message:</label>
-                <input type="text" name="message" id="message" required>
+                <textarea name="message" id="message"></textarea>
                 <button type="submit">Submit</button>
             </form>
             <% if (locals.errors) {%>
